Refs #1931 fix bug IE8: breadcrumbs partial hidden by menu on secondary pages

--- a/cms_frontend/css/ie/ie8-custom.css
+++ b/cms_frontend/css/ie/ie8-custom.css
@@ -71,6 +71,10 @@ width: 955px;
 margin-top: 5px;
 }
 
+.not-front .region.center-column {
+margin-top: 15px;
+}
+
 
 /* CENTER COLUMN */
 .center-column .region-content {
